feat: Implmentando autenticação na API
