# app/Modules/Auth/DTO/AuthCredentialsDTO.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Modules\Auth\DTO;
+
+class AuthCredentialsDTO
+{
+    public function __construct(
+        public string $username = '',
+        public string $password = ''
+    ) { }
+
+    public static function fromArray(array $data): self {
+        return new self(
+            username: $data['username'] ?? '',
+            password: $data['password'] ?? ''
+        );
+    }
+
+    public function toArray(): array {
+        return [
+            'username' => $this->username,
+            'password' => $this->password
+        ];
+    }
+}
